C1 (#937), part 1: the server side of unread + mentions (#983)
